--- a/comprar.html
+++ b/comprar.html
@@ -32,6 +32,9 @@
                 <li class="nav-item ">
                     <a class="nav-link" href="contacto.html">contacto</a>
                 </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="productos.html">productos</a>
+                </li>
               
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -118,8 +121,6 @@
             </div>
         </center>
     </div>
-
-
 
 
 
